<resources>
    <string name="app_name">FengOffice Time Tracker</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_url">FengOffice URL</string>
    <string name="error_incorrect_value">This field is incorrect</string>
    <string name="error_no_internet">Please check your internet connection</string>
    <string name="UseUntrustCA">Allow using untrusted certificates</string>
    <string name="GlobalFOObj">fo_obj</string>
    <string name="Save_credentials">Save password</string>


    <string name="title_activity_fott__main">FengOffice TimeTracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_fullsync">Full sync</string>
    <string name="action_exit">Exit</string>
    <string name="any_category"> Any category</string>


    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_can_close_task">Can complete tasks</string>
    <string name="pref_description_can_close_task">You will be able to complete tasks by creating new timeslots
    </string>

    <string name="pref_title_can_change_task">Can task\'s due date</string>
    <string name="pref_description_can_change_task">You will be able to move task\'s due date by creating new timeslots
    </string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_alert_frequency">Alerts frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="pref_alert_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>1.5 hours</item>
        <item>2 hours</item>
        <item>4 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_alert_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>240</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_date_format">Date format</string>
    <string name="pref_title_time_format">Time format</string>
    <string name="pref_description_time_format">Use 24H format?</string>
    <string-array name="pref_date_format_titles">
        <item>31/12/2015</item>
        <item>12/31/2015</item>
        <item>2015/12/31</item>
        <item>31.12.3015</item>
        <item>31 dec 2015</item>
        <item>Dec 31, 2015</item>
    </string-array>
    <string-array name="pref_date_format_values">
        <item>dd/MM/yyyy</item>
        <item>MM/dd/yyyy</item>
        <item>yyyy/MM/dd</item>
        <item>dd.MM.yyyy</item>
        <item>dd MMM yyyy</item>
        <item>MMM dd, yyyy</item>
    </string-array>

    <string name="addform_description">Description</string>
    <string name="addform_hours">Hours:</string>
    <string name="addform_minutes_short">Min:</string>
    <string name="addform_start">Start:</string>
    <string name="addform_end">Finish:</string>
    <string name="addform_save">Save</string>
    <string name="addform_cancel">Cancel</string>
    <string name="title_category">Category</string>
    <string name="title_categories">Categories</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_timeslots">Timeslots</string>
    <string name="title_no_tasks">No tasks</string>
    <string name="title_category_description">Timeslots for selected category</string>
    <string name="title_no_active_task_and_category">Please select task or category</string>
    <string name="ts_button_edit">Edit</string>
    <string name="addform_duration">Duration</string>
    <string name="addform_task_area">Also you can:</string>
    <string name="addform_complete_task">Complete the task</string>
    <string name="addform_change_due">Change task due date:</string>
    <string name="nonetwork_message">Check you network connection</string>
    <string name="error_save_record">Something was wrong. We couldn\'t save  this record.</string>
    <string name="addform_days">"Days: "</string>
    <string name="addform_close_question">"Are you sure you want to "</string>
    <string name="addform_resume">" resume "</string>
    <string name="addform_finish">" finish "</string>
    <string name="addform_task">task \'</string>
    <string name="addform_move_date">"Move the due date to "</string>
    <string name="addform_for_task">" for task \'"</string>
    <string name="addform_qestion">\'?</string>
    <string name="addform_yes">Yes</string>
    <string name="addform_no">No</string>
    <string name="alert_title">Work alert</string>
    <string name="alert_working">You are working</string>
    <string name="alert_on_task">" on task '"</string>
    <string name="alert_in_category">" in category '"</string>
    <string name="alert_stop_it">. Are you wish to stop this work?</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="alert_stop_timer">You have run timer. This action will stop it. Are you agree?</string>


    <string-array name="addform_minutes_values">
        <item>00</item>
        <item>05</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
    </string-array>

    <string-array name="addform_hours_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>
